--- a/.phraseapp.yml
+++ b/.phraseapp.yml
@@ -8,6 +8,6 @@ phraseapp:
           update_translations: true
     pull:
       targets:
-      - file: ./quote/<locale_code>.yml
+      - file: ./ICE-Scarlet/<locale_code>.yml
         params:
           file_format: strings
